--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -49,4 +49,4 @@ jobs:
         with:
           fail: true
           # removed md files that include liquid tags
-          args: --user-agent 'curl/7.54' --exclude-path README.md --exclude-path _pages/en-us/404.md --exclude-path _pages/pt-br/404.md --exclude-path _pages/en-us/blog.md --exclude-path _pages/pt-br/blog.md --exclude-path _posts/en-us/2018-12-22-distill.md --exclude-path _posts/pt-br/2018-12-22-distill.md --verbose --no-progress './**/*.md' './**/*.html'
+          args: --user-agent 'curl/7.54' --exclude-path README.md --exclude-path _pages/en-us/404.md --exclude-path _pages/ar-sa/404.md --exclude-path _pages/en-us/blog.md --exclude-path _pages/ar-sa/blog.md --exclude-path _posts/en-us/2018-12-22-distill.md --exclude-path _posts/ar-sa/2018-12-22-distill.md --verbose --no-progress './**/*.md' './**/*.html'
