--- a/docker-compose-slim.yml
+++ b/docker-compose-slim.yml
@@ -3,11 +3,9 @@ version: "3"
 services:
   jekyll:
     image: georgegca/multi-language-al-folio:slim
-    # build: .
+    build: .
     ports:
       - 8080:8080
       - 35729:35729
     volumes:
       - .:/srv/jekyll
-    environment:
-      - JEKYLL_ENV=development
