--- a/_data/en-uk/cv.yml
+++ b/_data/en-uk/cv.yml
@@ -32,13 +32,17 @@
 - title: Experience
   type: time_table
   contents:
+    - title: Research Associate
+      institution: School of Informatics, University of Edinburgh, Edinburgh, UK
+      year: Aug 2024-now
+      
     - title: Univeristy Teacher, TTDS
       institution: School of Informatics, University of Edinburgh, Edinburgh, UK
-      year: 2024-now
+      year: Feb 2024- Jul 2024
       
     - title: Research Associate
       institution: School of Informatics, University of Edinburgh, Edinburgh, UK
-      year: 2022-2024
+      year: 2022-Feb 2024
 
     - title: Research Fellow
       institution: School of Scoial and Political Science, University of Edinburgh, Edinburgh, UK
