--- a/_data/ar-sa/cv.yml
+++ b/_data/ar-sa/cv.yml
@@ -32,13 +32,17 @@
 - title: الخبرات العملية
   type: time_table
   contents:
-    - title: مدرس جامعي, تقنيات معالجة النصوص في علوم البيانات
-      institution: كلية المعلوماتية , جامعة إدنبرة, إدنبرة, المملكة المتحدة
-      year: 2024-الآن
+    - title: مهندس تعلم الآلة والذكاء الاصطناعي
+      institution: شركة Qulaitrol, غلاسكو, المملكة المتحدة
+      year: Nov 2024 - الآن
 
     - title: باحث مشارك
       institution: كلية المعلوماتية, جامعة إدنبرة, إدنبرة, المملكة المتحدة
-      year: 2022-2024
+      year: Feb 2022- Feb 2025
+
+    - title: مدرس جامعي, تقنيات معالجة النصوص في علوم البيانات
+      institution: كلية المعلوماتية , جامعة إدنبرة, إدنبرة, المملكة المتحدة
+      year: Feb 2024 - Jul 2024
 
     - title: باحث
       institution: كلية العلوم الاجتماعية والسياسية, جامعة إدنبرة, إدنبرة, المملكة المتحدة
