--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -10,6 +10,10 @@
   - firstname: ["Amr", "Elalfy"]
     url: https://uwaterloo.ca/school-environment-enterprise-development/profiles/amr-elalfy-0
 
+"naramhaisen":
+  - firstname: ["Naram", "Mhaisen"]
+    url: ""
+
 "johnquigley":
   - firstname: ["John", "Quigley"]
     url: https://pureportal.strath.ac.uk/en/persons/john-quigley
